--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -190,7 +190,7 @@
     <value>A Curve Reference can only be obtained from an Element.</value>
   </data>
   <data name="CurveReferenceHint" xml:space="preserve">
-    <value>You can use the {0} or {1} to turn this Curve into a Revit Element.</value>
+    <value>The input curves should come from a Revit Element. You can use the {0} or {1} to turn this Curve into a Revit Element.</value>
   </data>
   <data name="CurveRequired" xml:space="preserve">
     <value>Please supply a curve geometry.</value>
@@ -244,7 +244,7 @@
     <value>A Face Reference can only be obtained from an Element.</value>
   </data>
   <data name="FaceReferenceHint" xml:space="preserve">
-    <value>You can use the {0} to turn this Surface into a Revit Element, then extract a ElementFaceReference from it.</value>
+    <value>The input surfaces should come from a Revit Element. You can use the {0} to turn this Surface into a Revit Element, then extract a ElementFaceReference from it.</value>
   </data>
   <data name="FamilyInstanceCreationFailure" xml:space="preserve">
     <value>Could not create the FamilyInstance</value>
@@ -382,7 +382,7 @@
     <value>Element not valid. Use an element from a BuiltInCategory.</value>
   </data>
   <data name="NotEnoughDataError" xml:space="preserve">
-    <value>You need at least two elements for a dimension.</value>
+    <value>You need at least two {0} for a dimension.</value>
   </data>
   <data name="NotHostElement" xml:space="preserve">
     <value>Element is not a Host Element</value>
