Add Icon for some view nodes

--- a/src/DynamoRevitIcons/DSRevitNodesUIImages.resx
+++ b/src/DynamoRevitIcons/DSRevitNodesUIImages.resx
@@ -1534,4 +1534,146 @@
         UGqWEvJEAAAAAElFTkSuQmCC
 </value>
     </data>
+    <data name="DSRevitNodesUI.ViewDuplicateOptions.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAACXBIWXMAAAsSAAALEgHS3X78AAAClUlE
+        QVR4nO3cTU7CQBjG8RfDPXTV2+gB2OgRTLiAFyDRLTtPoNELyA3c0pXeQBP2GLQxtbYwnY8+nfD/JW6w
+        LcWH92VmWpms1+uteSqKYuK7byxlWaY4f+9jNhz8+5xEeiJ4IgCxaf3px9BS+up7zo4tK+Tv0Kt9UQFi
+        BCBGAGIEIEYA/t6qD9zmT13b79/qG0xdnj5ksqMywIju2swePPf7RQX4ezSzVc+9V9V+vwggzHXPvf9t
+        79SCGi6SvqQwTwM/36uZ3ZvZpcO299X2f1AB4Xbv6s8DR/nsqhYCCPdhZrcHjnJbbffPZLs9PMBpjIKy
+        aEGCda3d8PK05fF3Mzvr2okKiOeq40hdj38jgHheWoalq+rxTgQQV/PdvvfdbwQQ3e5z4K466F1z2aEN
+        AcR3U33w3rgc2Wci1qooiufYL6Usy/PYxxzAx75RTxMVIEYAYtFaUF2ie3UGM+T5UwFiBCCWpAXVca/R
+        flSAGAGIJW9BITwmd9m1OypAjADEZC2Ie41+UAFiBCA2llHQ0d5rRAWIEYBYkhaU4/pPiJDXSwWIEYBY
+        tBbkcgE9xYX73FEBYgQgRgBiBCBGAGLT+rLwsU2gxoAKECMAMZ+JWMjybJQWN/CELmlbpgLECEDMqQWN
+        eXS0XC6zu7hfRwWIEYAYAYgRgBgBiP0ZBfW9XZC1o3BUgBgBiE1zbyOz2WwEZ+GPChAjADECECMAMQIQ
+        G/W/qcYyn89bj7RYLOTnRgWIEYBY8u8LymWi19WmQri0OCpAjADEnL47ui+XFhTra8E2mw0X5UEA2ZJN
+        xLia9oMKECMAMdaCxKgAMQIQS96CcrnXiLWgI0UAYknWgobEWhAIIGcEIEYAYgQgRgBiBCBGAEpm9gVH
+        1pbvTocEqwAAAABJRU5ErkJggg==
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewDuplicateOptions.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAACXBIWXMAAAsSAAALEgHS3X78AAABQklE
+        QVRYhd1WwRGCMBBcGAvxlTa0AS2Alz1QgDbAgy9laAWWQT5qBz7448CgQkjCkQvguDPMBEIuy93ukSDP
+        8xIKhBCB+swEKaVtfW+uwTd+RaAsS/i6CPE68yvql3rAqRXiPT51COjSSQWhbFsAm2Z8BHCtBroM7B32
+        PxPeOQC4KfcIxwiOAku8O4C0GafNPUKfmxNQ1f7R1oNRhEKIi2lOSrlzJPAEsG4/sLpgwOODoKwftCFH
+        I+paHSGnPqApjzNJMoGpesTYDHjvEVYbztEjjBloW81mSS7mbkQ9hBxx+YCuBDrRaLVALI1VRx0CLqLL
+        soyVwcU1UGdA1YFv+1kJcDeLoohFYHkb+gwWx3F9jcHgecC1RDYiSZJ8xkF1NqcQMB0uiqJg2ZD8N5zK
+        Gb+tATB6hBcNUMDVwH/1gdEA8AIvnc7YFjGyAwAAAABJRU5ErkJggg==
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewDisciplines.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAACXBIWXMAAAsSAAALEgHS3X78AAABfklE
+        QVR4nO3dQY6CQBQAUTAsOScX4BwcAK4Je9ySKJFW7OoP9daTIWOlO9Kf0Xpd10qcZpomC2TQdV397iqP
+        q/2h0RgAZgCYAWAGgBkAZgCYAWAGgBkAZgBYPc+zZ0EZtG3rWVCJDAAzAMwAMAPADAAzAMwAsCb18n3f
+        f/yZYRjivRIQVwDMALDkLegXR7avKM7aZl0BMAPAsm5Bvjt65QqAGQDmRCwTJ2KFMgDMADADwAwAMwDM
+        ADADwAwAMwDMADCH8jBXAMwAMIfyX3IofxEGgIUcyu9NlyJyBcAMAAs5lN9uQdE/cs0VADMAzAAwA8AM
+        ADMAzAAwA8CSb8RKmIhtb8SWZfFGTAYIK+REbBzHU35PCVwBMAPAbvFvqntbXwnPL7kCYAaAJW9BV33s
+        8B/PLB15rVwBMAPAwg/lPQuSASIzAMwAMAPAsp4FUTwLkgFKdYst6AjPgm7KALDwX+rvWZAMEJkBYAaA
+        GQBmAJgBYAaAhb8Ri84VQKqq6glVX1T8uVBRtAAAAABJRU5ErkJggg==
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewDisciplines.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAACXBIWXMAAAsSAAALEgHS3X78AAAAsElE
+        QVRYhe2Wyw2AIBBEwXikThqgDgpY2oQ7BhMMfgOOSmJ2TobLDuy8iZKIouggrbVMU4cew0uxAem975IB
+        pRRnYNa4PTDGLN/W2u8NHKk0dVdnl6ky8OZLMAVsgDGEMMxJRgRhmAw45yCMmYLdClooSCsIIUArgCgg
+        ImR2vYHaPshGW/pjZ+Cp8rnqjnIGjCGagX9hmJ69tbarQnjXzJlWGYgR+yHiDKCCVwBJCDEBSWlRKmla
+        ElgAAAAASUVORK5CYII=
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewDisplayStyles.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAKnUlEQVR4nO1dS2xdRxn+/vGN8yC0coMd
+        X8ePRMnNgrCpABUKCCok2iwawQYWlbpAVTdVN0QgsahaiQULlAoEqCKbSt3RDUoWIKRWAsRTIFVCgEQc
+        x3ac5oHlJA1RaR72oGnnuJPf/7zOPece++Z+0tEZz5k7Z/7vm/lnzn8exgDNgrTWm0aCK1eu7CaiRwB8
+        GsARIuoAmAKwh4i2F+W01rcArABYAjCrtf4ngL8C+MvY2NjNZq3IQ+MCXL58eR+ArxPRMSL6HIBtRASz
+        GRR7CUXbnf0drfUfAJzWWr8+Pj7+djNWpaMRAS5dumRYfRzA80T0OBENFaRL5EsiCOTzbRXAr7XWPzb7
+        dru9eYa6g54LcPHixWMAXiKihznpqSIkkH/PBuAtrfVLExMTp3tqbAJ6JsCFCxc+TkQ/JaIvxYiXhIAV
+        wW1vQTI8IqytrfG83wB4bt++ff/qidEJqF2ApaWlFhF9F8ALSqltPpKVUtFR4CKl9wsCFPPE9wB8f3Jy
+        8m6txiegVgGWlpYmAPyciD4fI9wnAB8FBaTe7xIukc/yfg/gG1NTUxdrIyABtQlw/vz5T5nVCBG1U0gv
+        0qGR4CLW62Ni2O2S1vrY9PT032ohIQGqjkoXFxefAPBbl3zuy1334nNJOVtsIvcsZ9umnba9jaByARYW
+        Fp4EcArALn4shXhpZBTb0NDQBlFyJnKPEKadpxYXF5/c8gIsLCx8AcDrAIb5MT4C+D4khG8k+FyW7xzu
+        +ZkQw+bCzba/p6hMgPn5+Y7t+TvKkM+F4ARLhHPypfp87eDnIyLT7lPWjp6hEgHm5+c/AuAXAEZiRvuO
+        Se7BJThAnDhZ+9IRjBg7rD09QSUCaK1/aIJnEkES4SFyfK6EI8Xn++qP4Ii1pyfoWoBz584dBfBM1Y0N
+        rFx6gWesXbWjKwHm5uZ2aa1fqaOR7oVWQ3jF2Ff3qbsdAd8CMMMzfeTxIBpPS/AdTwjAifVniDpj7asV
+        pQWYm5v7GIDvSMS46ZDBUtkYoQjEgXx1d4FvWztrQ2kBtNbPAfhoitFSj+QkSoQGQggbjvHf+87F2xUR
+        8AFrZ20oFQs6e/asuT14nojG0MUVrnSx5VvzuxNyKP7DY0GZsSGpU/wHwPShQ4du1SFC2RHwVQBjbkaK
+        kL6RECPUbKurq/f87W4hUn3nzcCYtbcWlBJAa/10yJjYpOhzP7yXxjbe6yM9ObuTOHi6LgGyXdDs7OwD
+        AJaJ6P14TyykEHNFsb/5OZA4eqRRkel63LRxP2OdTudGNbR/iDIj4MtSsA0Zwzu24vG5l9RRESI51KaA
+        Hdut3ZWjVaLCx3jDpSvWnJEllS3qlUIS0uom1qtTRIm0+TEb76oUZQT4DATi3b+lYyGYnuuL5xR1+ciK
+        kR2DNEdJ+8LuqpE1B8zOzg4BuFmEnEOx99h8EDom1SPBR7xPjFTf7xHgPQC7O53OapUa5I6AGTfe7/ZO
+        vocwaboIHeP1FZB+U0YEfi6pLgE7rP3nMjkLIksArfU00kK69xgSIlv6Tci18brhEYH/zctHJl0x39rf
+        nAAA9vKM0CjgxEm+XKpLSod+w/cpgkhlQ+ey+Rvs7xa5AjzIyeGN9LmiVBGkekLl3HSuGFI9obzC/iqR
+        K8BOHxGcKKk3lxHEPeYbEaEJNKe3x/J99neDMsvQ9UZJvjqWn7rq8okqlePpmBChfaj+OpArwH9TCsXm
+        hVQxYi4IGQKk7Hl9ApLsz0GuAPfEQmIrlqp6fqis9HfIz6eU8f3N7a8CuQJseJA1VQQ4/r6qURAiLEeM
+        WF0h+7tFrgCLUmaKCAiMitCkHBIpRQAkEJ7h50X7u0F2OPrMmTPvmFt10jHeU6Wr2NS0r04XqZNyaloq
+        6+DG4cOHK1+GlglHv+U7EOuRKctDab3u22K/4WmpTTEbUuzuBmUE+FPooCRCiICy5Ev1xojvgvyo3WWR
+        LYBS6o2cpaGUFyOP56UKEarH93eozS6I6I1ggZLIvhAjIvNqj5kHHgw1Wlq9uBMtmNG+q9zcOSB0rAzx
+        tg3vWLsrR/YIOHjw4C0iOh2L1YeMk3qh1Ht5vs/9pNaR2j4X9nGZ05vqsRQieo3fPPHBZzwixJTZfHWk
+        npfDeTjgtWySElFKAKXUm0qpM6kiIFGIFFJSzpHrmiQ45Bs73+yqYaHzlPnR/v37NRG9zN/TSkEKQTF3
+        k+qSpN/EQBuf1nv5wIEDtUXkSj8bSkSvEtF56TmeFOT2+DKjJPc3tPFZJWPfq8knLIHSAszMzNxWSr0o
+        vUiXg6rcT4Gy9bnEOx3qRWNnJQ3znbcbw5eWlpTW+o9a60cKo6WnlrtqoDCqOp1OY6/OVI2uXtCYmppa
+        U0o9q5S643ulNMctScj19VsNXb8jNjk5+XcieiH2Vnu3QvQrSt+SdKGU+oHW+otKqaM5oYMqcPLkyS09
+        JCp5TXViYsK4oqeUUv9O/b5D7qqpX1HZm/LtdvsaER1VSr2d+6GN+1mQSr8V0W6354noCSJaLiNCSJic
+        q+6thMq/ljI+Pv4PpdSjRLQQIlb68knqNhAggr17955VSn2WiP6cSy4XRhKqn1CbNWNjY5eVUuYDfT9R
+        SmkfqUU6NCLMMXfrJ1SyDPVhdHTUxNCfX15e/hUR/UxrPQnP7UOwSGW/XXD50JPxPDo6+kul1BGl1Aml
+        1G1f7+cjwzcq+gk9/3DrysrKAfMJSwBPaa2Hc3p/kT8+Pr6+FLp58+aWHiqNfTv66tWr5pvRzwL4puua
+        CoTaNTo6OhCgKly7ds34lEcBfE1r/RX74ad1gqX27dmzZyBAXbh+/fpDAD4J4BNa60Mm3mc4B7D+GbGR
+        kZGHi/RAgIax1QXoryXFFkSt1wGbBcePHxdbcuLEicZbOBgBDWMgQMO4L1xQCnxuqhukuLhGBSAiZUfh
+        kN3I7nnb7rkJoLVe6W1L60OlAtibJYbAbbbulv3WjpQ2ZZQlV9rAiXdQy5PKTaDUdYD5r0eWwJ32402G
+        2Ifs3pC62yF0p90r+5siv0grZyMmioIghtb6R0V6q18HREcAfdCthy1h2+z39gs3sdMha4eTXv8524OV
+        IZYX2voSogDWN2+3xBfuokDKykki2ZfmZYmNAF6mr7AugPXfO20Pb7mxF/aNBLenuyNgt+MydjnpHY6L
+        GXbSxRyg7PmK8i2PG+pfARyfLr5+2iU4cVLP58fAyFd9KwARcRdTFhJBPt/vKyOV426pr+5VFsvEAu4d
+        b+XJd5ePw056yOmtLU8PJqfuUO8HIx1OPdkCbPZY0P1x93uTQtmvAVaNmKhaKCP97ZYze/PFwrV+EqCl
+        tV4jonetC3nXOeYaqlhaWjredY7dFi6+ipCDYmnuvpQnH545pBI0GgvSH1wO3yWiG9avi58mFqBLkuL2
+        avLku/u1fpyAwS/EzGiwLuk9OyqKi7G1kqFrLaQl0qVyUrrvlqJJsSAnyNayF1/bnBUUMXcBR1g3n6/n
+        pUAcWBkxKKe1/l2R7vtYED58NGTVbu+/sm9FaTkxIjdetEOoOzQCiOXzvL5dqXX11UQ78Zrtf/y4DeK1
+        WGjaTZttyBlZQ+waotXv5KPOGzJ2Yr9jtwE8GNwTbhgDARrGQICGMRCgYQwEGGCAAZoCgP8Dtp7pFw8C
+        96gAAAAASUVORK5CYII=
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewDisplayStyles.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAADQElEQVRYhd1XzUpbQRT+zszcm9rWSipV
+        ohRaisEHsMtin0FowYUP0JbShfQxAl2IiAu33bjpGxSEbpo30IioBFwIKUp/EnNPOdcZmVzn3iSmuOgH
+        h7mZuXPON985M3dCzIx+aDabREQvlVLLSqkXRPSMiCJm7jBzg5l3kiT5nCTJ15mZmf4OPfQlcHx8/Fwp
+        ta61XtBaQ0wpBSKCzE2SJLWLiwtp60mSvJ2dnf0+KAFVNHh4ePgOwDciWpCgEtwYgyiKEMdxavLsiMl7
+        8r6dNxqBg4ODDwDWiMhI8BABaeW3U8UqY4hozc6/GYFGo7HIzDV5FqmduSAS1BHKBE/Nora/v784NIG9
+        vT0DYAOAzo4V1UtgTOZvNBoNMxQBAEsA5n3HvnW73bTgpHUmRZh9z86dZ+aloQgw80rWmat0F7DT6aDd
+        bqcmz46EI+IrIv6KCPRsw93dXUngDyIad3n1c+1y7/It8IllVbGEzgBMzM3NBfPXkx9mrgAYz0ovjiSg
+        SO8I+CnyA/rpsBi3fpt9CQCY9B2LswzBtC9LwA+eUw+TgxI4Q6aiXQDnTJTwiWWVChWj8zsIAWHZARC5
+        yU5+d/Rm9npPoID8sP6Cqxf07IJqtdoGUM9bnb8b/LZAekHd+u1PQKC13g6tMLQl/cA5q5d62c4LHiRg
+        jNkyxrSKSBSZg8wXP1rrrSICwc/x0dHRm263u+72dB6q1SrlDg6I4DltjNlQSskF5LVsuewp52Nzc3Oo
+        C8i1WKHOSqXCJycnK0opo7VeKjhkRkbufWB6erodRdGrKIo+xnH8U77/pVLp6iIi9i8w0J3w9PS0wszv
+        ASwz8xM3Z2pqis7Pz0eSYyACPlqt1mNmfgqgXC6Xv9w6gSx8Aqurq2lbq9UGnp97W6HLg0DGI2vGmtRN
+        uv2YOfeIdWRC8AmSO99tkDsAxuwn+RGABwDu2f4SgNgjJXM/jZoCucGKw4cA7tvgYzbohO0Tu2v7HRET
+        ujPeBMpblbJOY2s6I7k79cj2XUufyF4kfVABAL/kSwqg7ZGQVqSVc/i3JVSy0se2LfxTM1QNXP24LIbY
+        k7pkn30CThUpwp2Ra8D/wZds/li7FRTK+P8DwF/GiZSRLucEbwAAAABJRU5ErkJggg==
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewPartsVisibilitys.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAB5ElEQVR4nO3dsXHCMBhAYZFjFhfMwUY0
+        2SAVC7AZlBSewD0p0pg7SGTrl58Vv6/OBfO/SAficJJYu+v1+oi+gq7rdi10vd1u+HP/iL4ATWMA2H78
+        8K1sHVGinm/JVuYKgBkAZgCYAWAGgO2XevhhGL5SSp9rHcRf7vd7OhwO4a8SF1kB/2H4fd9X+d3VAzj8
+        31UN4PD/Vi2Aw89TJYDDzxcewOFPExrA4U8XFsDhzxMSwOHPVxzA4ZcpCuDwy+0ej3kf5mxx+MfjcR1n
+        Qf7lx5kcwOHHmhTA4cfLDuDw68gK4PDryfpErO/7Zoeffq5/BVfxmp8JwwwAMwDMADADwAwAMwDMADAD
+        wAwAMwDMADADwAwAMwDMADADwAwAMwDMALDFvqYaaepNNrquW+1zcQXADABrcgsau1wu4bcdW5IrAGYA
+        mAFgBoAZAGYAmAFgBoBlfU21xj2WS4zPgoZh8I2YDNCs/Xh72dq9o9fAFQAzAKz54+gcp9Pp5U+dz2f8
+        2lwBMAPANrEF5Xi3TZXI2eJcATADwJ7+j9i7N2KeBdXjCoAZAJb1KsgzonpcATADwDwLgrkCYAaAPW1B
+        UW+4WnzV5FnQRhkANvv29WvhWZAM0DIDwAwAMwDMADADwAwgiZJS+ga/hu/y4dYjaQAAAABJRU5ErkJg
+        gg==
+      </value>
+    </data>
+    <data name="DSRevitNodesUI.ViewPartsVisibilitys.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+      <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAA7ElEQVRYhe2Xyw2DMAyGnaqz5MAYVTZi
+        DhbILh0Ejhw8ge+pgkolEHbzIuHAJ+WUx//HcV5qHEcHDFprxdVJTNMUPqY34JyDGuVI65Eyw5I8/41F
+        RC8AeKdqzvMMXdexSylGoIQ4IoptWAM1xFkDtcQ9ymfi2eLGmLAcqDnzlc0uQMRk8W//6D7Nz4HbwG3g
+        +peRxP5u11rXNeCx1rKPjxDuHNhcRtJb7gifA0SUtwSxoqUpugR93y8lhuxdIJnhGIbhV7P8C9b93CIH
+        NhFI/YjkcI0c4EKfE5HgHNg/SmPJPgey1AvQ3EBbAOADUybchdpo43UAAAAASUVORK5CYII=
+      </value>
+    </data>
 </root>
