--- a/src/Libraries/RevitNodesUI/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.en-US.resx
@@ -162,12 +162,12 @@
     <comment>Description for All Elements of Family Type</comment>
   </data>
   <data name="ElementsofTypeDescription" xml:space="preserve">
-    <value>All elements in the active document of a given type.</value>
-    <comment>Description for All Elements of Type</comment>
+    <value>All elements in the active document of a given class.</value>
+    <comment>Description for All Elements of Class</comment>
   </data>
   <data name="ElementTypesDescription" xml:space="preserve">
-    <value>All element subtypes.</value>
-    <comment>Description for Element Types</comment>
+    <value>All element subclasses.</value>
+    <comment>Description for Element Classes</comment>
   </data>
   <data name="ExportColumnHeadersDescription" xml:space="preserve">
     <value>How to export column headers. Default is MultipleRows.</value>
