Added new node for Ceiling creation.
Added new dropdown node for CeilingType.
Replaced obsoleted Floor creation API with a new one.
Added tests for new nodes.

--- a/src/Libraries/RevitNodesUI/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.en-US.resx
@@ -456,4 +456,7 @@
     <value>Tag LeaderEnd Condition</value>
     <comment>Description for Tag LeaderEnd Condition</comment>
   </data>
+  <data name="NoCeilingTypesAvailable" xml:space="preserve">
+    <value>No ceiling types available.</value>
+  </data>
 </root>
