--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -531,4 +531,10 @@
   <data name="CantModifyInView" xml:space="preserve">
     <value>Can't modify {0} of this view</value>
   </data>
+  <data name="CeilingTypeNotFound" xml:space="preserve">
+    <value>A Revit CeilingType with that name could not be located in the document.</value>
+  </data>
+  <data name="NotHorizontalInputPolyCurveError" xml:space="preserve">
+    <value>Curves does not create closed horizontal loop.</value>
+  </data>
 </root>
