Upgrade Tag nodes with new Revit API

--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -558,4 +558,10 @@
   <data name="CantModifyInView" xml:space="preserve">
     <value>Can't modify {0} of this view</value>
   </data>
+  <data name="GetTaggedLocalElements" xml:space="preserve">
+    <value>There are more than one Tagged Local Elements.</value>
+  </data>
+  <data name="GetTaggedReferences" xml:space="preserve">
+    <value>There are more than one Tagged References.</value>
+  </data>
 </root>
