Add Select reference on element node so that can get Linked element reference to create dimension

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -537,4 +537,7 @@
   <data name="GetTaggedReferences" xml:space="preserve">
     <value>There are more than one Tagged References.</value>
   </data>
+  <data name="ReferenceSelectFailure" xml:space="preserve">
+    <value>Please select a surface or edge on an element.</value>
+  </data>
 </root>
