--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -574,22 +574,22 @@
     <value>Curves does not create closed horizontal loop.</value>
   </data>
   <data name="CreateProjectParameterForAllCategoriesObsolete" xml:space="preserve">
-    <value>This node may be removed in future version. Use CreateProjectParameterForAllCategories(string, string, ForgeType, ForgeType, bool) instead.</value>
+    <value>This node may be removed in future version. Use CreateProjectParameterForAllCategories(string, string, SpecType, GroupType, bool) instead.</value>
   </data>
   <data name="CreateProjectParameterObsolete" xml:space="preserve">
-    <value>This node may be removed in future version. Use CreateProjectParameter(string, string, ForgeType, ForgeType, bool, IEnumerable&lt;Category&gt;) instead.</value>
+    <value>This node may be removed in future version. Use CreateProjectParameter(string, string, SpecType, GroupType, bool, IEnumerable&lt;Category&gt;) instead.</value>
   </data>
   <data name="CreateSharedParameterForAllCategoriesObsolete" xml:space="preserve">
-    <value>This node may be removed in future version. Use CreateSharedParameterForAllCategories(string, string, ForgeType, ForgeType, bool) instead.</value>
+    <value>This node may be removed in future version. Use CreateSharedParameterForAllCategories(string, string, SpecType, GroupType, bool) instead.</value>
   </data>
   <data name="CreateSharedParameterObsolete" xml:space="preserve">
-    <value>This node may be removed in future version. Use CreateSharedParameter(string, string, ForgeType, ForgeType, bool, IEnumerable&lt;Category&gt;) instead.</value>
+    <value>This node may be removed in future version. Use CreateSharedParameter(string, string, SpecType, GroupType, bool, IEnumerable&lt;Category&gt;) instead.</value>
   </data>
   <data name="FamilyDocumentAddParameterObsolete" xml:space="preserve">
-    <value>This node may be removed in future version. Use FamilyDocument.AddParameter(string, ForgeType, ForgeType, bool) instead.</value>
+    <value>This node may be removed in future version. Use FamilyDocument.AddParameter(string, GroupType, SpecType, bool) instead.</value>
   </data>
   <data name="GlobalParameterByNameObsolete" xml:space="preserve">
-    <value>This node may be removed in future version. Use GlobalParameter.ByName(string, ForgeType)</value>
+    <value>This node may be removed in future version. Use GlobalParameter.ByName(string, SpecType)</value>
   </data>
   <data name="GroupObsolete" xml:space="preserve">
     <value>This property may be removed in future version. Use GroupType instead.</value>
@@ -599,5 +599,8 @@
   </data>
   <data name="UnitTypeObsolete" xml:space="preserve">
     <value>This property may be removed in future version. Use SpecType instead.</value>
+  </data>
+  <data name="InvalidForgeTypeId" xml:space="preserve">
+    <value>The id string is not valid for object of type {0}.</value>
   </data>
 </root>
