--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -576,4 +576,7 @@
   <data name="InvalidForgeTypeId" xml:space="preserve">
     <value>The id string is not valid for object of type {0}.</value>
   </data>
+  <data name="AppearanceAssetElementPropertyPathInvalid" xml:space="preserve">
+    <value>Input value for propertyPath is invalid.</value>
+  </data>
 </root>
