--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -603,4 +603,10 @@
   <data name="InvalidForgeTypeId" xml:space="preserve">
     <value>The id string is not valid for object of type {0}.</value>
   </data>
+  <data name="AppearanceAssetElementPropertyPathInvalid" xml:space="preserve">
+    <value>Input value for imageProperty {0} is invalid. There is no {1} in {2}.</value>
+  </data>
+  <data name="AppearanceAssetElementPropertyPathNoConnect" xml:space="preserve">
+   <value>Input value for imageProperty {0} is invalid. There is no texture connected to {1} in {2}.</value>
+  </data>   
 </root>
