--- a/src/Libraries/RevitServices/Properties/Resources.resx
+++ b/src/Libraries/RevitServices/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CantCloseLastOpenView" xml:space="preserve">
+    <value>This is the last opened view {0} , can't be delete</value>
+  </data>
   <data name="TransactionsDisabled" xml:space="preserve">
     <value>DynamoRevit TransactionManager is disabled.  This Node is disabled as new Revit transactions are not supported in this mode.</value>
   </data>
