Improve warning message for AdaptiveComponent.ByPoints node

--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -624,4 +624,7 @@
   <data name="IndexOccupiedOrNotAvailable" xml:space="preserve">
     <value>Selected index is already occupied by a View or not available.The elevation marker can have up to four views, indexed from 0 to 3. The index on the ElevationMarker specifies where the new elevation View will be placed. Check how many views the Elevation Mark family loaded in the model contains and which indexes are empty.</value>
   </data>
+  <data name="NotAdaptiveFamily" xml:space="preserve">
+    <value>The selected FamilyType is not an adaptive family. AdaptiveComponent.ByPoints requires an adaptive family with placement points.</value>
+  </data>
 </root>
