--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -616,7 +616,7 @@
     <value>There is no ToposolidType of the given name in the current Document.</value>
   </data>
   <data name="StructuralPlanNotEnabled" xml:space="preserve">
-    <value>StructuralPlans can only be created when the structural discipline is enabled whereas FloorPlans and CeilingPlans can only be created when architecture or MEP disciplines are enabled. Check which tabs are active under File -&gt; Options -&gt; User Interface -&gt; Configure Tools and analysis</value>
+    <value>StructuralPlans can only be created when the structural discipline is enabled whereas FloorPlans and CeilingPlans can only be created when architecture or MEP disciplines are enabled. Check which tabs are active under File -&gt; Options -&gt; User Interface -&gt; Configure Tools and analyses</value>
   </data>
   <data name="NotSingleList" xml:space="preserve">
     <value>AdaptiveComponents.ByPoints operation failed. The AdaptiveComponents.ByPoints node accepts as imput a 2D array of points (structured list of lists) and a Family type to be used for creating the adaptive component.</value>
