--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -595,12 +595,12 @@
     <value>StructuralPlans can only be created when the structural discipline is enabled whereas FloorPlans and CeilingPlans can only be created when architecture or MEP disciplines are enabled. Check which tabs are active under File -&gt; Options -&gt; User Interface -&gt; Configure Tools and analyses</value>
   </data>
   <data name="NotSingleList" xml:space="preserve">
-    <value>AdaptiveComponents.ByPoints operation failed. The AdaptiveComponents.ByPoints node accepts as imput a 2D array of points (structured list of lists) and a Family type to be used for creating the adaptive component.</value>
+    <value>The AdaptiveComponents.ByPoints node accepts as input a 2D array of points (structured list of lists) and a Family type to be used for creating the adaptive component.</value>
   </data>
   <data name="IndexOccupiedOrNotAvailable" xml:space="preserve">
     <value>Selected index is already occupied by a View or not available.The elevation marker can have up to four views, indexed from 0 to 3. The index on the ElevationMarker specifies where the new elevation View will be placed. Check how many views the Elevation Mark family loaded in the model contains and which indexes are empty.</value>
   </data>
-  <data name="NotAdaptiveFamily" xml:space="preserve">
-    <value>The selected FamilyType is not an adaptive family. AdaptiveComponent.ByPoints requires an adaptive family with placement points.</value>
+  <data name="DesiredNumberOfPoints" xml:space="preserve">
+    <value>At index {0} expected {1} points, but given {2}.</value>
   </data>
 </root>
